mount/conf: Fix IPv6 parsing

Fixes: https://tracker.ceph.com/issues/47300

Signed-off-by: Matan Breizman <mbreizma@redhat.com>
(cherry picked from commit 5be921f334324c04344d26c024cf4a9ba403fbdd)